Update index, just a test
Update index, just a test with spanish text.

--- a/index.html
+++ b/index.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <title>Hack Club</title>
+  </head>
   <body>
-    <p>This page is a placeholder to test the hackclub.es custom domain on GitHub pages.</p>
+    <p>
+    <h2>Por estudiantes para estudiantes</h2>
+    <h1>Hack Club</h1>
+    <h3>Hack Club es una red de clubs de ciencias de la computación
+      donde estudiantes aprenden a programar creando proyectos.
+    </h3>
+    </p>
   </body>
 </html>
