--- a/index.html
+++ b/index.html
@@ -48,7 +48,8 @@
 		<div class="row">
 			<div class="eight columns hero-cta">
 				<h1 class="hero-heading">Por estudiantes para estudiantes</h1>
-				<p>Hack Club es una red de clubs de ciencias de la computación donde estudiantes aprenden a programar creando proyectos.</p>
+				<p>Hack Club es una red de clubs de ciencias de la computación donde estudiantes aprenden a programar creando proyectos.<br>
+				<a class="button inverse" href="https://hackclub.com/">Visita nuestra web completa en inglés</a></p>
 			</div>
 		</div>
 	</div>
