--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
   <style amp-custom>
 @font-face {
   font-family: "Phantom Sans";
-  src: url("https://hackclub.com/fonts/Phantom_Sans_0.4/Regular.woff") format("woff"), url("https://hackclub.com/fonts/Phantom_Sans_0.4/Regular.woff2") format("woff2");
+  src: url("https://hackclub.com/fonts/Phantom_Sans_0.6/Regular.woff") format("woff"), url("https://hackclub.com/fonts/Phantom_Sans_0.6/Regular.woff2") format("woff2");
   font-weight: normal;
   font-style: normal;
   font-display: swap;
 }
 @font-face {
   font-family: "Phantom Sans";
-  src: url("https://hackclub.com/fonts/Phantom_Sans_0.4/Bold.woff") format("woff"), url("https://hackclub.com/fonts/Phantom_Sans_0.4/Bold.woff2") format("woff2");
+  src: url("https://hackclub.com/fonts/Phantom_Sans_0.6/Bold.woff") format("woff"), url("https://hackclub.com/fonts/Phantom_Sans_0.6/Bold.woff2") format("woff2");
   font-weight: bold;
   font-style: normal;
   font-display: swap;
@@ -230,6 +230,21 @@ img {
   .github-corner .octo-arm {
     -webkit-animation: octocat-wave 560ms ease-in-out;
             animation: octocat-wave 560ms ease-in-out;
+  }
+}
+    
+@media (prefers-color-scheme: dark) {
+  body {
+    background-color: #1e1e1e;
+    color: #ddd;
+  }
+
+  h1 {
+    color: #fff;
+  }
+
+  footer {
+    background-color: #111;
   }
 }
   </style>
