--- a/index.html
+++ b/index.html
@@ -1,290 +1,62 @@
 <!DOCTYPE html>
-<html amp lang="es">
-
+<html lang="en">
 <head>
-  <meta charset="utf-8">
-  <script async src="https://cdn.ampproject.org/v0.js"></script>
-  <link rel="canonical" href="/">
-  <title>Hack Club – por estudiantes, para estudiantes</title>
-  <meta name="description" content="Hack Club es una red de clubs de ciencias de la computación donde estudiantes aprenden a programar creando proyectos.">
-  <meta name="viewport" content="width=device-width,initial-scale=1">
-  <meta name="theme-color" content="#e42d42">
-  <style amp-boilerplate>body{-webkit-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-moz-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-ms-animation:-amp-start 8s steps(1,end) 0s 1 normal both;animation:-amp-start 8s steps(1,end) 0s 1 normal both}@-webkit-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-moz-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-ms-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-o-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}</style><noscript><style amp-boilerplate>body{-webkit-animation:none;-moz-animation:none;-ms-animation:none;animation:none}</style></noscript>
-  <style amp-custom>
-@font-face {
-  font-family: "Phantom Sans";
-  src: url("https://hackclub.com/fonts/Phantom_Sans_0.6/Regular.woff") format("woff"), url("https://hackclub.com/fonts/Phantom_Sans_0.6/Regular.woff2") format("woff2");
-  font-weight: normal;
-  font-style: normal;
-  font-display: swap;
-}
-@font-face {
-  font-family: "Phantom Sans";
-  src: url("https://hackclub.com/fonts/Phantom_Sans_0.6/Bold.woff") format("woff"), url("https://hackclub.com/fonts/Phantom_Sans_0.6/Bold.woff2") format("woff2");
-  font-weight: bold;
-  font-style: normal;
-  font-display: swap;
-}
-
-* {
-  box-sizing: border-box;
-}
-
-body {
-  font-family: "Phantom Sans", system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
-  line-height: 1.5;
-  margin: 0;
-  color: #384046;
-  display: flex;
-  flex-direction: column;
-  min-height: 100vh;
-}
-
-a {
-  cursor: pointer;
-  color: #e42d42;
-  text-decoration: none;
-  transition: all 0.2s ease;
-  border-bottom: 1px solid transparent;
-}
-a:hover {
-  border-bottom: 1px solid #b52434;
-}
-
-h1,
-h2 {
-  font-size: 2rem;
-  line-height: 1;
-  margin: 1rem 0;
-}
-
-nav {
-  background-color: #e42d42;
-  background-image: radial-gradient(ellipse farthest-corner at top left, #e4732d 6.25%, #e42d42 75%);
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  padding: 1rem 0;
-  height: 80px;
-}
-nav a {
-  color: #fff;
-  font-size: 1.5rem;
-  font-weight: bold;
-  text-transform: uppercase;
-}
-
-.container {
-  max-width: 48rem;
-  width: 100%;
-  padding: 0 1rem;
-  margin: auto;
-}
-
-article.container {
-  flex: 1 1 auto;
-  padding: 2rem 1rem;
-}
-
-@media (min-width: 32em) {
-  h1 {
-    font-size: 3rem;
-  }
-
-  article.container {
-    padding: 4rem 1rem;
-  }
-
-  footer .container {
-    padding: 2rem 1rem;
-  }
-}
-p {
-  font-size: 1.5rem;
-  margin-bottom: 1.5rem;
-}
-
-footer {
-  background-color: #dde1e4;
-  color: #5f6e76;
-}
-footer h2 {
-  font-size: 1.25rem;
-}
-footer p {
-  font-size: 1rem;
-  margin-bottom: 1rem;
-}
-
-.button {
-  -webkit-appearance: none;
-     -moz-appearance: none;
-          appearance: none;
-  color: #fff;
-  background-color: #e42d42;
-  background-image: radial-gradient(ellipse farthest-corner at top left, #2de4cf 6.25%, #2d9ee4 75%, #288ecd);
-  display: inline-block;
-  padding: 18px 24px;
-  outline: none;
-  border: none;
-  font-size: 1.25rem;
-  line-height: 1.125;
-  font-weight: bold;
-  cursor: pointer;
-  text-align: center;
-  transition: box-shadow 0.25s, -webkit-transform 0.2s cubic-bezier(0.375, 0, 0.625, 1);
-  transition: box-shadow 0.25s, transform 0.25s cubic-bezier(0.375, 0, 0.625, 1);
-  transition: box-shadow 0.25s, transform 0.25s cubic-bezier(0.375, 0, 0.625, 1), -webkit-transform 0.25s cubic-bezier(0.375, 0, 0.625, 1);
-  -webkit-transform: scale(1);
-          transform: scale(1);
-  -webkit-transform-origin: center left;
-          transform-origin: center left;
-  border-radius: 999px;
-  white-space: nowrap;
-  text-decoration: none;
-  box-shadow: 0 6px 12px rgba(0, 0, 0, 0.125);
-}
-.button:hover {
-  border: none;
-  -webkit-transform: scale(1.0625);
-          transform: scale(1.0625);
-  box-shadow: 0 6px 12px rgba(0, 0, 0, 0.125), 0 9px 18px rgba(0, 0, 0, 0.125);
-}
-
-img {
-  max-width: 100%;
-  transition: all 0.3s ease-in 0s;
-}
-
-.img-wrapper {
-  display: inline-block;
-  background: #fff;
-  box-shadow: 0 6px 12px rgba(0, 0, 0, 0.125), 0 9px 18px rgba(0, 0, 0, 0.125);
-  border-radius: 0.5rem;
-  line-height: 0;
-  max-width: 100%;
-  margin-top: 1.5rem;
-  overflow: hidden;
-}
-
-.github-corner,
-.github-corner:hover {
-  border-bottom: 0;
-}
-
-.github-corner svg {
-  fill: #fff;
-  color: #e42d42;
-  position: absolute;
-  top: 0;
-  border: 0;
-  right: 0;
-}
-
-.github-corner:hover .octo-arm {
-  -webkit-animation: octocat-wave 560ms ease-in-out;
-          animation: octocat-wave 560ms ease-in-out;
-}
-
-@-webkit-keyframes octocat-wave {
-  0%,
-  100% {
-    -webkit-transform: rotate(0);
-            transform: rotate(0);
-  }
-  20%,
-  60% {
-    -webkit-transform: rotate(-25deg);
-            transform: rotate(-25deg);
-  }
-  40%,
-  80% {
-    -webkit-transform: rotate(10deg);
-            transform: rotate(10deg);
-  }
-}
-
-@keyframes octocat-wave {
-  0%,
-  100% {
-    -webkit-transform: rotate(0);
-            transform: rotate(0);
-  }
-  20%,
-  60% {
-    -webkit-transform: rotate(-25deg);
-            transform: rotate(-25deg);
-  }
-  40%,
-  80% {
-    -webkit-transform: rotate(10deg);
-            transform: rotate(10deg);
-  }
-}
-@media (max-width: 500px) {
-  .github-corner:hover .octo-arm {
-    -webkit-animation: none;
-            animation: none;
-  }
-
-  .github-corner .octo-arm {
-    -webkit-animation: octocat-wave 560ms ease-in-out;
-            animation: octocat-wave 560ms ease-in-out;
-  }
-}
-    
-@media (prefers-color-scheme: dark) {
-  body {
-    background-color: #1e1e1e;
-    color: #ddd;
-  }
-
-  h1 {
-    color: #fff;
-  }
-
-  footer {
-    background-color: #111;
-  }
-}
-  </style>
-</head>
-
-<body style="direction: ltr;">
-  <a href="https://github.com/hackclub" class="github-corner" aria-label="GitHub">
-    <svg width="80" height="80" viewbox="0 0 250 250" aria-hidden="true">
-      <path d="M0,0 L115,115 L130,115 L142,142 L250,250 L250,0 Z"></path>
-      <path d="M128.3,109.0 C113.8,99.7 119.0,89.6 119.0,89.6 C122.0,82.7 120.5,78.6 120.5,78.6 C119.2,72.0 123.4,76.3 123.4,76.3 C127.3,80.9 125.5,87.3 125.5,87.3 C122.9,97.6 130.6,101.9 134.4,103.2" fill="currentColor" style="transform-origin: 130px 106px;" class="octo-arm"></path>
-      <path d="M115.0,115.0 C114.9,115.1 118.7,116.5 119.8,115.4 L133.7,101.6 C136.9,99.2 139.9,98.4 142.2,98.6 C133.8,88.0 127.5,74.4 143.8,58.0 C148.5,53.4 154.0,51.2 159.7,51.0 C160.3,49.4 163.2,43.6 171.4,40.1 C171.4,40.1 176.1,42.5 178.8,56.2 C183.1,58.6 187.2,61.8 190.9,65.4 C194.5,69.0 197.7,73.2 200.1,77.6 C213.8,80.2 216.3,84.9 216.3,84.9 C212.7,93.1 206.9,96.0 205.4,96.6 C205.1,102.4 203.0,107.8 198.3,112.5 C181.9,128.9 168.3,122.5 157.7,114.1 C157.9,116.9 156.7,120.9 152.7,124.9 L141.0,136.5 C139.8,137.7 141.6,141.9 141.8,141.8 Z" fill="currentColor" class="octo-body"></path>
-    </svg>
-  </a>
-  <nav>
-    <div class="container">
-      <a href="https://hackclub.com/?ref=es">Hack Club</a>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Hack Club - Por estudiantes, para estudiantes</title>
+    <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Baloo+2:wght@400;700&amp;family=Shrikhand&amp;display=swap" rel="stylesheet">
+</head> 
+<body>
+    <div id="navbar">
+        <a href="https://hackclub.com" id="hackclubcom"></a>
+        <nav role="navigation">
+            <a href="https://hackclub.com/slack">SLACK</a>
+            <a href="https://hackclub.com/workshops">TALLERES</a>
+            <a href="https://hackclub.com/scrapbook">SCRAPBOOK</a>
+        </nav>
     </div>
-  </nav>
-  <article class="container">
-    <h1 class="hero-heading">Por estudiantes,<br>para estudiantes.</h1>
-    <p>Hack Club es una red de clubs de ciencias de la computación donde estudiantes aprenden a programar creando proyectos.</p>
-    <p><a class="button" href="https://hackclub.com/?ref=es">Visita nuestra web completa en inglés</a></p>
-    <div class="img-wrapper">
-      <amp-img alt="Students coding at a Hack Club event"
-      src="https://cdn.glitch.com/f0afe4d3-a031-4c0e-8dd5-766cd9ae1e8b%2Ftea_team.jpg?1550999670860"
-      width="512" height="341" />
-    </div>
-  </article>
-  <footer>
-    <div class="container">
-      <h2>Hack Club HQ</h2>
-      <p>
-        576 Natoma St<br> San Francisco, CA, USA 94103
-      </p>
-      <p>
-        EIN: 81-2908499<br>
-        <a href="tel:1-855-625-HACK">1-855-625-HACK</a> (sin costo)
-      </p>
-    </div>
-  </footer>
+    <article class="container">
+        <div id="hero"></div>
+        <section id="intro">
+            <h1>Por estudiantes, para estudiantes</h1>
+            <p>
+                Hack Club es una red de clubs de ciencias de la computación donde estudiantes aprenden a programar creando proyectos.
+            </p>
+        </section>
+        <div id="scrapbook-cont">
+            <section id="scrapbook">
+                <div>
+                    <h3>scrapbook.hackclub.com</h3>
+                    <h2 class="cursive">Comparte tu progreso diario</h2>
+                    <p>
+                        Conforme aprendas y hagas proyectos, comparte con fotos/videos, resumenes cortos de lo que hiciste cada día y crea una racha. 
+                        Incluso puedes configurar el estilo de tu sitio y usar tu propio dominio.
+                    </p>
+                    <a href="" class="button" style="background: #ec3750; color: white;">Ve lo que todos están haciendo</a>
+                </div>
+                <div style="background-image:url(https://dl.airtable.com/.attachmentThumbnails/169f54f04aa5f292dc8fd2dbc99493ee/a7a1ce23)" class="example"></div>
+                <div style="background-image:url(https://dl.airtable.com/.attachmentThumbnails/11e238585dc4cf7af50a80c6298cf5d2/a7942d49)" class="example"></div>
+                <div style="background-image:url(https://dl.airtable.com/.attachmentThumbnails/2bac8828b908d77f9113121e292d53b1/36ee25e7)" class="example"></div>
+            </section>
+        </div>
+        <div id="slack-cont">
+            <video src="https://cdn.glitch.com/2d637c98-ed35-417a-bf89-cecc165d7398%2Foutput-no-duplicate-frames.hecv.mp4?v=1590780967658" autoplay></video>
+            <div id="background"></div>
+            <section id="slack">
+                <h3>Slack de la comunidad</h3>
+                <h2 class="cursive">Amigos, mentores y eventos semanales en Slack</h2>
+                <p>
+                    Entra a una increíble comunidad de más de 10k adolescentes creadores. Tenemos eventos en vivo, incluyendo entrevistas, talleres de programación, demostraciones y mucho más.
+                </p>
+                <a href="" class="button" style="background: white; color: black;">Únete ahora</a>
+
+            </section>
+        </div>
+
+
+    </article>
+
+
 </body>
-
 </html>
